[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[lsp]>=0.14.10",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.95.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
]
